syntax = "proto3";

package user;

option go_package = "github.com/nuhmanudheent/online-learning-platform/user";

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetProfile (ProfileRequest) returns (ProfileResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message ProfileRequest {
    string user_id = 1;
}

message ProfileResponse {
    string user_id = 1;
    string username = 2;
    string email = 3;
}
